--- a/index.html
+++ b/index.html
@@ -5,16 +5,16 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
         <!--=============== FAVICON ===============-->
-        <link rel="shortcut icon" href="assets/img/favicon.png" type="image/x-icon">
+        <link rel="shortcut icon" href=".assets/img/favicon.png" type="image/x-icon">
 
         <!--=============== BOXICONS ===============-->
         
 
         <!--=============== SWIPER CSS ===============-->
-        <link rel="stylesheet" href="assets/css/swiper-bundle.min.css">
+        <link rel="stylesheet" href=".assets/css/swiper-bundle.min.css">
 
         <!--=============== CSS ===============-->
-        <link rel="stylesheet" href="assets/css/styles.css">
+        <link rel="stylesheet" href=".assets/css/styles.css">
         
 
         <title> Responsive portfolio website Ansel </title>
@@ -69,15 +69,15 @@
         </footer>
 
         <!--=============== SCROLLREVEAL ===============-->
-        <script src="assets/js/scrollreveal.min.js"></script>
+        <script src=".assets/js/scrollreveal.min.js"></script>
 
         <!--=============== SWIPER JS ===============-->
-        <script src="assets/css/swiper-bundle.min.css"></script>
+        <script src=".assets/css/swiper-bundle.min.css"></script>
 
         <!--=============== MIXITUP FILTER ===============-->
-        <script src="assets/js/mixitup.min.js"></script>
+        <script src=".assets/js/mixitup.min.js"></script>
 
         <!--=============== MAIN JS ===============-->
-        <script src="assets/js/main.js"></script>
+        <script src=".assets/js/main.js"></script>
     </body>
 </html>
